# src/main/java/hu/webuni/cst/kamarasd/web/CourseController.java
@@ -1,5 +1,6 @@
 package hu.webuni.cst.kamarasd.web;
 
+import java.lang.module.ResolutionException;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
@@ -10,7 +11,9 @@ import javax.validation.constraints.NotNull;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.querydsl.binding.QuerydslPredicate;
 import org.springframework.data.web.SortDefault;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
 
@@ -24,6 +27,7 @@ import hu.webuni.cst.kamarasd.model.Course;
 import hu.webuni.cst.kamarasd.repository.CourseRepository;
 import hu.webuni.cst.kamarasd.service.CourseService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.web.server.ResponseStatusException;
 
 @RestController
 @RequiredArgsConstructor
@@ -34,6 +38,7 @@ public class CourseController implements CourseControllerApi {
 	private final CourseService courseService;
 	private final NativeWebRequest nativeWebRequest;
 	private final ResolverHelper resolverHelper;
+	private final SimpMessagingTemplate simpMessagingTemplate;
 	
 	@Override
 	public Optional<NativeWebRequest> getRequest() {
@@ -77,12 +82,12 @@ public class CourseController implements CourseControllerApi {
 		return ResponseEntity.ok(courseMapper.courseToDto(courseService.getThisHistory(id, date)));
 	}
 
+	@Override
+	public ResponseEntity<Void> cancelCourse(Long id, String day) {
+		Course course = courseRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+		simpMessagingTemplate.convertAndSend("/topic/courseChat/" + course.getId(), String.format("The %s course has been cancelled on: %s", course.getName(), day));
 
-	
+		return ResponseEntity.ok().build();
+	}
 
-
-
-
-
-	
 }
